# splog

./: .gitignore  CMakeLists.txt  README.md  file.cpp  file.h  log.cpp  log.h  main.cpp  splog.cpp  splog.h  splog_p.cpp  splog_p.h
.github/workflows/: cmake-multi-platform.yml  cmake-multi-release.yml
include/: splog.h
splog/: CMakeLists.txt  splog.cpp
text/: CMakeLists.txt  text_c_abi.c
